# news_for_dumb

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  __init__.py  docker-compose.yml  pyproject.toml
.github /workflows/: n1_scrape_daily_job.yml
.github/workflows/: n1_daily_job.yml
log_utilis/: utilis.py
source/log_utilis/: __init__.py  utilis.py
source/scraper/: admin.py  models.py
source/scraper/api/: __init__.py  n1_api.py  s3_api.py
source/scraper/management/commands/: n1_latest_news.py  n1_scrape_one_news_by_url.py
source/scraper/migrations/: 0001_initial.py  0002_alter_news_post_time.py  0003_alter_news_options.py  0004_alter_news_country.py  0005_tag_news_tags.py  0006_news_long_summary_news_short_summary_alter_news_url_and_more.py  0007_category_alter_news_category.py  0008_alter_category_options.py  0009_rename_long_summary_news_summary_and_more.py
source/scraper/news_api/: n1_api.py
source/scraper/serializers/: __init__.py  category.py  news.py  tag.py
source/source/: settings.py  urls.py
source/static/summarizer/css/: style.css
source/static/summarizer/js/: overview_script.js  script.js  summarizer_script.js
source/summarizer/: urls.py
source/summarizer/forms/: __init__.py  summarizer.py
source/summarizer/management/commands/: summarize_news.py
source/summarizer/summarizers/: __init__.py  bart.py  base_handler.py  gpt_4o_mini.py
source/summarizer/templates/: base.html  overview_view.html  summarizer_view.html
source/summarizer/views/: __init__.py  category.py  news.py  summarizer.py  summarizer_page.py  tag.py
source/templates/summarizer/: summarizer_form.html  summarizer_view.html
source/users/: models.py
source/users/migrations/: 0001_initial.py
